<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4F5F7"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/text_container"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="1dp"
                app:cardCornerRadius="10dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                >
                <EditText
                    android:id="@+id/etMessageText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_text_too_encrypt_or_decrypt"
                    android:padding="10dp"
                    android:background="@null"
                    android:gravity="top|start"
                    android:layout_margin="10dp"
                    android:inputType="textMultiLine"
                    android:importantForAutofill="no"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_clear"
                    app:layout_constraintStart_toStartOf="parent"
                    />


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/key_container"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="1dp"
                app:cardCornerRadius="10dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/text_container"
                >

                <EditText
                    android:id="@+id/etKeyText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_key"
                    android:padding="5dp"
                    android:background="@null"
                    android:gravity="top|start"
                    android:maxLines="1"
                    android:maxLength="16"
                    android:layout_margin="10dp"
                    android:inputType="textMultiLine"
                    android:importantForAutofill="no"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_clear"
                    app:layout_constraintStart_toStartOf="parent"
                    />


            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/key_notice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/key_must_be_16_characters"
                android:textSize="12sp"
                android:layout_marginTop="7dp"
                android:paddingHorizontal="10dp"
                app:layout_constraintStart_toStartOf="@+id/key_container"
                app:layout_constraintEnd_toEndOf="@+id/key_container"
                app:layout_constraintTop_toBottomOf="@+id/key_container"
                />

            <Button
                android:id="@+id/btn_decrypt"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:text="@string/decrypt"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/key_notice"
                app:layout_constraintEnd_toStartOf="@+id/btn_encrypt"
                app:layout_constraintStart_toStartOf="parent"
                />
            <Button
                android:id="@+id/btn_encrypt"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:text="@string/encrypt"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_decrypt"
                app:layout_constraintTop_toBottomOf="@+id/key_notice"
                />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/result"
                android:textSize="14sp"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_encrypt"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
